Binary Threshold Implemented and added to gil.hpp header
Test for Binary and Binary inverse thresholds created

Threshold Example added

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,3 +40,4 @@ add_subdirectory(image)
 add_subdirectory(image_view)
 add_subdirectory(algorithm)
 add_subdirectory(legacy)
+add_subdirectory(threshold)
