--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -23,7 +23,8 @@ jobs:
         displayName: 'Check GCC'
       - template: .ci/azure-pipelines/steps-check-cmake.yml
       - script: |
-          sudo apt-get install libjpeg-dev libpng16-dev libtiff5-dev libraw-dev
+          sudo -E apt-get update
+          sudo -E apt-get -yq --no-install-suggests --no-install-recommends install libpng-dev libjpeg-dev libtiff5-dev libraw-dev
         displayName: 'Install dependencies'
       - template: .ci/azure-pipelines/steps-install-boost.yml
       - template: .ci/azure-pipelines/steps-cmake-build-and-test.yml
@@ -37,7 +38,8 @@ jobs:
         displayName: 'Check GCC'
       - template: .ci/azure-pipelines/steps-check-cmake.yml
       - script: |
-          sudo apt-get install libjpeg-dev libpng16-dev libtiff5-dev libraw-dev
+          sudo -E apt-get update
+          sudo -E apt-get -yq --no-install-suggests --no-install-recommends install libpng-dev libjpeg-dev libtiff5-dev libraw-dev
         displayName: 'Install dependencies'
       - template: .ci/azure-pipelines/steps-install-boost.yml
       - template: .ci/azure-pipelines/steps-cmake-build-and-test.yml
