--- a/.ci/azure-pipelines/steps-cmake-build-and-test.yml
+++ b/.ci/azure-pipelines/steps-cmake-build-and-test.yml
@@ -37,7 +37,7 @@ steps:
     workingDirectory: $(Build.SourcesDirectory)/boost-root/libs/gil
     displayName: 'Run CMake to build'
 
-  - script: cd _build && ctest --build-config ${{ parameters.configuration }} -VV --output-on-failure
+  - script: cd _build && ctest -V --output-on-failure --build-config ${{ parameters.configuration }}
     workingDirectory: $(Build.SourcesDirectory)/boost-root/libs/gil
     displayName: 'Run CTest to test'
     condition: ne(variables['Agent.OS'], 'Darwin')
@@ -46,7 +46,7 @@ steps:
       # Set DYLD_FALLBACK_LIBRARY_PATH to avoid 'dyld: Library not loaded: libboost_*.dylib' error
       export DYLD_FALLBACK_LIBRARY_PATH=$(Build.SourcesDirectory)/boost-root/stage/lib:$DYLD_FALLBACK_LIBRARY_PATH
       echo "DYLD_FALLBACK_LIBRARY_PATH=$DYLD_FALLBACK_LIBRARY_PATH"
-      cd _build && ctest --build-config ${{ parameters.configuration }} -VV --output-on-failure
+      cd _build && ctest -V --output-on-failure --build-config ${{ parameters.configuration }}
     workingDirectory: $(Build.SourcesDirectory)/boost-root/libs/gil
     displayName: 'Run CTest to test on macOS'
     condition: eq(variables['Agent.OS'], 'Darwin')
