--- a/test/channel/CMakeLists.txt
+++ b/test/channel/CMakeLists.txt
@@ -17,6 +17,7 @@ foreach(_name
   packed_channel_value
   scoped_channel_value
   test_fixture)
+  set(_test t_core_channel_${_name})
   set(_target test_core_channel_${_name})
 
   add_executable(${_target} "")
@@ -27,7 +28,7 @@ foreach(_name
       gil_include_directories
       gil_dependencies)
   target_compile_definitions(${_target} PRIVATE BOOST_GIL_USE_CONCEPT_CHECK)
-  add_test(test.core.channel.${_name} ${_target})
+  add_test(NAME ${_test} COMMAND ${_target})
 
   unset(_name)
   unset(_target)
