--- a/test/iterator/CMakeLists.txt
+++ b/test/iterator/CMakeLists.txt
@@ -9,6 +9,7 @@ foreach(_name
   concepts
   dynamic_step
   is_planar)
+  set(_test t_core_iterator_${_name})
   set(_target test_core_iterator_${_name})
 
   add_executable(${_target} "")
@@ -19,8 +20,9 @@ foreach(_name
       gil_include_directories
       gil_dependencies)
   target_compile_definitions(${_target} PRIVATE BOOST_GIL_USE_CONCEPT_CHECK)
-  add_test(test.core.iterator.${_name} ${_target})
+  add_test(NAME ${_test} COMMAND ${_target})
 
   unset(_name)
   unset(_target)
+  unset(_test)
 endforeach()
