--- a/test/pixel/CMakeLists.txt
+++ b/test/pixel/CMakeLists.txt
@@ -15,6 +15,7 @@ foreach(_name
   pixel_reference_is_mutable
   pixels_are_compatible
   test_fixture)
+  set(_test t_core_pixel_${_name})
   set(_target test_core_pixel_${_name})
 
   add_executable(${_target} "")
@@ -25,8 +26,9 @@ foreach(_name
       gil_include_directories
       gil_dependencies)
   target_compile_definitions(${_target} PRIVATE BOOST_GIL_USE_CONCEPT_CHECK)
-  add_test(test.core.pixel.${_name} ${_target})
+  add_test(NAME ${_test} COMMAND ${_target})
 
   unset(_name)
   unset(_target)
+  unset(_test)
 endforeach()
