--- a/test/image_view/CMakeLists.txt
+++ b/test/image_view/CMakeLists.txt
@@ -16,6 +16,7 @@ foreach(_name
   view_is_step
   view_type
   view_type_from_pixel)
+  set(_test t_core_image_view_${_name})
   set(_target test_core_image_view_${_name})
 
   add_executable(${_target} "")
@@ -26,8 +27,9 @@ foreach(_name
       gil_include_directories
       gil_dependencies)
   target_compile_definitions(${_target} PRIVATE BOOST_GIL_USE_CONCEPT_CHECK)
-  add_test(test.core.image_view.${_name} ${_target})
+  add_test(NAME ${_test} COMMAND ${_target})
 
   unset(_name)
   unset(_target)
+  unset(_test)
 endforeach()
