--- a/test/locator/CMakeLists.txt
+++ b/test/locator/CMakeLists.txt
@@ -8,6 +8,7 @@
 foreach(_name
   concepts
   dynamic_step)
+  set(_test t_core_locator_${_name})
   set(_target test_core_locator_${_name})
 
   add_executable(${_target} "")
@@ -18,8 +19,9 @@ foreach(_name
       gil_include_directories
       gil_dependencies)
   target_compile_definitions(${_target} PRIVATE BOOST_GIL_USE_CONCEPT_CHECK)
-  add_test(test.core.locator.${_name} ${_target})
+  add_test(NAME ${_test} COMMAND ${_target})
 
   unset(_name)
   unset(_target)
+  unset(_test)
 endforeach()
