--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # Copyright 2016 Peter Dimov
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE_1_0.txt or copy at http://boost.org/LICENSE_1_0.txt)
+dist: xenial
+
 language: cpp
 
 sudo: false
