--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,23 @@ indent_style = space
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.{cpp,hpp}]
+guidelines = 80, 90
+indent_size = 4
+indent_style = space
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.rst]
+guidelines = 90
+indent_size = 4
+indent_style = space
+max_line_length = 90
+trim_trailing_whitespace = true
+insert_final_newline = true
+
 [{Jamfile*,CMakeLists.txt,CMakeSettings.json,*.cmake}]
+guidelines = 90
 indent_size = 2
 indent_style = space
 trim_trailing_whitespace = true
@@ -18,12 +34,5 @@ insert_final_newline = true
 [*.yml]
 indent_size = 2
 indent_style = space
-trim_trailing_whitespace = true
-insert_final_newline = true
-
-[*.rst]
-indent_size = 4
-indent_style = space
-max_line_length = 80
 trim_trailing_whitespace = true
 insert_final_newline = true
