Deploy Celero and Google Benchmark as external project instead of Conan
This way we have a bit more control on release of dependencies what solves
some annoying issues (e.g. Conan is missing latest Celero fixed for VS2019).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -246,15 +246,15 @@ if(BUILD_TESTING)
 endif()
 
 #-----------------------------------------------------------------------------
-# Benchmarks
-#-----------------------------------------------------------------------------
-if(GIL_BUILD_BENCHMARKS)
-  add_subdirectory(benchmark)
-endif()
-
-#-----------------------------------------------------------------------------
 # Examples
 #-----------------------------------------------------------------------------
 if(BOOST_GIL_BUILD_EXAMPLES AND BOOST_GIL_ENABLE_EXT_IO)
   add_subdirectory(example)
+endif()
+
+#-----------------------------------------------------------------------------
+# Benchmarks
+#-----------------------------------------------------------------------------
+if(BOOST_GIL_BUILD_BENCHMARKS)
+  add_subdirectory(benchmark)
 endif()
