Otsu threshold implemented closes #311

--- a/test/core/image_processing/CMakeLists.txt
+++ b/test/core/image_processing/CMakeLists.txt
@@ -8,7 +8,8 @@
 #
 foreach(_name
     threshold_binary
-    threshold_truncate)
+    threshold_truncate
+    threshold_otsu)
     set(_test t_core_image_processing_${_name})
     set(_target test_core_image_processing_${_name})
 
