Add first tests for convolve functions from Numeric extension
First stab at convolution tests includes cases with the identity kernel.
Move `pixel`-s streaming facility used by Boost.Test (required  by
`BOOST_TEST` macro) to the common header for re-use in other tests.

--- a/test/extension/numeric/CMakeLists.txt
+++ b/test/extension/numeric/CMakeLists.txt
@@ -9,9 +9,13 @@
 message(STATUS "Boost.GIL: Configuring tests in test/extension/numeric")
 
 foreach(_name
+  convolve_cols
+  convolve_rows
+  convolve_2d
   kernel
   matrix3x2
-  numeric)
+  numeric
+  test_fixture)
   set(_test t_ext_numeric_${_name})
   set(_target test_ext_numeric_${_name})
 
