--- a/test/extension/dynamic_image/CMakeLists.txt
+++ b/test/extension/dynamic_image/CMakeLists.txt
@@ -1,25 +1,15 @@
 #
-# Copyright (c) 2018 Mateusz Loskot <mateusz at loskot dot net>
+# Copyright (c) 2019 Mateusz Loskot <mateusz at loskot dot net>
 #
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE_1_0.txt or copy at
 # http://www.boost.org/LICENSE_1_0.txt)
 #
+message(STATUS "Boost.GIL: Configuring tests in test/extension/dynamic_image")
 foreach(_name
-  collection
-  concepts
-  derived_view_type
-  dynamic_step
-  is_planar
-  planar_rgba_view
-  subimage_view
-  view_is_basic
-  view_is_mutable
-  view_is_step
-  view_type
-  view_type_from_pixel)
-  set(_test t_core_image_view_${_name})
-  set(_target test_core_image_view_${_name})
+  subimage_view)
+  set(_test t_ext_dynamic_image_${_name})
+  set(_target test_ext_dynamic_image_${_name})
 
   add_executable(${_target} "")
   target_sources(${_target} PRIVATE ${_name}.cpp)
