Implement generation of simple kernels
This commits implements mean and
Gaussian kernel generators,
roughly documents them, and has
tests. But tests for Gaussian have
accuracy problem

--- a/test/core/image_processing/CMakeLists.txt
+++ b/test/core/image_processing/CMakeLists.txt
@@ -28,7 +28,8 @@ foreach(_name
 endforeach()
 
 foreach(_name
-  lanczos_scaling)
+  lanczos_scaling
+  simple_kernels)
   set(_test t_core_image_processing_${_name})
   set(_target test_core_image_processing_${_name})
 
