Add tests for extension/numeric/pixel_numeric_operations.hpp
Add new and update existing Doxygen comments describing interfaces in
`extension/numeric/pixel_numeric_operations.hpp`.

--- a/test/extension/numeric/CMakeLists.txt
+++ b/test/extension/numeric/CMakeLists.txt
@@ -15,7 +15,8 @@ foreach(_name
   convolve
   kernel
   matrix3x2
-  numeric)
+  numeric
+  pixel_numeric_operations)
   set(_test t_ext_numeric_${_name})
   set(_target test_ext_numeric_${_name})
 
