--- a/.travis.yml
+++ b/.travis.yml
@@ -185,6 +185,9 @@ matrix:
         apt:
           packages:
             - doxygen
+            - python3
+            - python3-pip
+            - python3-setuptools
 
   allow_failures:
     - env: COMPILER=clang++-6.0 VARIANT=gil_ubsan_integer TOOLSET=clang CXXSTD=11 B2_OPTIONS="visibility=global" UBSAN_OPTIONS='print_stacktrace=1'
@@ -192,8 +195,9 @@ matrix:
 install:
   - |-
     if [ "$DOC" ]; then
-      pip --version
-      pip install --user sphinx==1.7.9
+      pip3 --version
+      pip3 install --upgrade pip
+      pip3 install --user sphinx>=2.1
       sphinx-build --version
     fi
   - cd ..
