Restore previous state of Harris
This is a fresh start of branch
Harris with manual copying and
placement of code from previous
versions

--- a/test/core/image_processing/CMakeLists.txt
+++ b/test/core/image_processing/CMakeLists.txt
@@ -29,7 +29,8 @@ endforeach()
 
 foreach(_name
   lanczos_scaling
-  simple_kernels)
+  simple_kernels
+  harris)
   set(_test t_core_image_processing_${_name})
   set(_target test_core_image_processing_${_name})
 
