Create simple test for Hessian detector
This commit adds an s at the end of
function name to make it uniform with
another detector, and adds a simple
test for sanity check

--- a/test/core/image_processing/CMakeLists.txt
+++ b/test/core/image_processing/CMakeLists.txt
@@ -30,7 +30,8 @@ endforeach()
 foreach(_name
   lanczos_scaling
   simple_kernels
-  harris)
+  harris
+  hessian)
   set(_test t_core_image_processing_${_name})
   set(_target test_core_image_processing_${_name})
 
