implemented `box_filter`
implemented `blur` function

tests added for `box_filter`

closes #382

--- a/test/core/image_processing/CMakeLists.txt
+++ b/test/core/image_processing/CMakeLists.txt
@@ -31,7 +31,8 @@ foreach(_name
   lanczos_scaling
   simple_kernels
   harris
-  hessian)
+  hessian
+  box_filter)
   set(_test t_core_image_processing_${_name})
   set(_target test_core_image_processing_${_name})
 
