Add GIL_ENABLE_EXT_DYNAMIC_IMAGE to CMakeSettings.json example [ci skip]

--- a/example/cmake/CMakeSettings.json
+++ b/example/cmake/CMakeSettings.json
@@ -25,6 +25,7 @@
         { "name": "Boost_COMPILER", "value": "-vc142;-vc141" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "OFF" },
+        { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
@@ -49,6 +50,7 @@
         { "name": "Boost_COMPILER", "value": "-vc142;-vc141" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "OFF" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "OFF" },
+        { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "OFF" },
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
@@ -73,6 +75,7 @@
         { "name": "Boost_COMPILER", "value": "-vc142;-vc141" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
@@ -97,6 +100,7 @@
         { "name": "Boost_COMPILER", "value": "-vc142;-vc141" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
@@ -120,6 +124,7 @@
         { "name": "Boost_COMPILER", "value": "-vc142" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
@@ -143,6 +148,7 @@
         { "name": "Boost_COMPILER", "value": "-vc142" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
@@ -166,6 +172,7 @@
         { "name": "Boost_COMPILER", "value": "-vc142" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
@@ -189,6 +196,7 @@
         { "name": "Boost_COMPILER", "value": "-vc142" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
@@ -212,6 +220,7 @@
         { "name": "Boost_COMPILER", "value": "-vc141" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
@@ -278,6 +287,7 @@
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
@@ -305,6 +315,7 @@
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
@@ -331,6 +342,7 @@
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
@@ -357,6 +369,7 @@
         { "name": "Boost_ARCHITECTURE", "value": "-x64" },
         { "name": "GIL_BUILD_EXAMPLES", "value": "ON" },
         { "name": "GIL_BUILD_HEADER_TESTS", "value": "ON" },
+        { "name": "GIL_ENABLE_EXT_DYNAMIC_IMAGE", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_IO", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_NUMERIC", "value": "ON" },
         { "name": "GIL_ENABLE_EXT_TOOLBOX", "value": "ON" },
